# XBrainLab

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  _commit_msg.txt  conftest.py  coverage.json  coverage_output.txt  coverage_raw.json  current_requirements.txt  debug_import.py  debug_parser.py  debug_training_import.py  debug_viz.py  diagnose.py  lint_fix_plan.txt  mkdocs.yml  pyproject.toml  pytest.ini  pytest_log.txt  reproduce_epoch_error.py  reproduce_epoching.py  reproduce_filter_resample.py  reproduce_resample.py  requirements.txt  run.py  settings.json  test_real_tools_error.txt  test_real_tools_error_utf8.txt  test_result.txt  verify_backend.py  verify_full_workflow.py  verify_path.py
.agents/: README.md  stack.md
.agents/context/: architecture-target.md  project.md  thesis.md
.agents/runbooks/: active-queue.md  architecture-review.md  autopilot.md  backend-product-goal.md  refactor-gate.md  session-prompts.md  setup.md
.agents/skills/: README.md
.agents/workflows/: README.md  agent-toolcall-scoring.md  architecture-review.md  commit.md  docs-site-redesign.md  documentation-review.md  refactor-slice.md  tdd-change.md  tdd.md  test-audit.md
.basedpyright/: baseline.json
.github/workflows/: ci.yml  docs-pages.yml  main.yml  test.yml
XBrainLab/: __init__.py  check_deps.py  config.py  debug_torch.py  reproduce_issue.py  study.py  test_output.txt
XBrainLab/backend/: __init__.py  data_manager.py  exceptions.py  facade.py  study.py  training_manager.py
XBrainLab/debug/: tool_debug_mode.py  tool_executor.py
XBrainLab/llm/: __init__.py  pipeline_state.py
XBrainLab/load_data/: __init__.py  data_loader.py  event_loader.py  label_loader.py  raw.py  raw_data_loader.py
XBrainLab/mcp/: __init__.py  http_server.py  server.py
XBrainLab/model_base/: EEGNet.py
XBrainLab/preprocessor/: __init__.py  resample.py  time_epoch.py
XBrainLab/tests/: conftest.py  test_repro.py  test_study.py
XBrainLab/training/: training_plan.py  utils.py
XBrainLab/ui/: __init__.py  agent_worker.py  application_capabilities.py  chat_panel.py  dash_board.py  legacy_controller_bootstrap.py  main_window.py  montage_positions.py  product_language.py  refresh_coordinator.py  table_sizing.py  ui_auto.py  window_placement.py
XBrainLab/ui_pyqt/: agent_worker.py  data_loader_helper.py  dataset_panel.py  main_window.py
XBrainLab/utils/: filename_parser.py  logger.py
XBrainLab/visualization/: __init__.py  base.py  saliency_spectrogram_map.py  saliency_topomap.py
artifacts/: README.md
artifacts/agent_evals/: dashboard.md  latest.json  latest.md  local-eval-resource-pressure-2026-05-05.json  local-eval-resource-pressure-2026-05-05.md
artifacts/data_interpretation/: format-capability-matrix.json  format-capability-matrix.md  internal-event-evidence-A01T-A03T.json
artifacts/docs-site/: visual-review.json
artifacts/goal/: README.md  continuation-2026-05-04-product-completion.md  continuation-2026-05-05-backend-ui-boundary.md  continuation-2026-05-05-ui-polish-boundary.md  continuation-2026-05-06-ui-table-eval-handoff.md  goal-1-product-autopilot.md  handoff-2026-05-04-usage-refresh.md
artifacts/launcher/: windows-launcher-walkthrough.json  windows-launcher-walkthrough.md
artifacts/mcp/: http-walkthrough.json  http-walkthrough.md  inspector-cli-tools-list.json  inspector-cli-tools-list.md  inspector-gui-walkthrough.json  inspector-gui-walkthrough.md  stdio-walkthrough.json  stdio-walkthrough.md  xbrainlab-mcp.json  xbrainlab-mcp.md
artifacts/ui/: .gitignore  chatpanel-local-walkthrough.json  chatpanel-local-walkthrough.md  data-interpretation-replay.json
docs/: ACTIVE_QUEUE.md  AGENT_SKILLS.md  AUTOPILOT.md  BACKLOG.md  CODEX_SETUP.md  COVERAGE_GAPS.md  PLAN.md  RISK_CLUSTERS.md  SESSION_LOG.md  STATUS_REPORT.md  TAKEOVER.md  TESTING_STRATEGY.md  UI_BASELINE.md  WORKFLOWS.md  changelog.md  contributing.md  current.md  index.md  operations.md
docs/agent/: benchmark.md  data-management.md  experiment-guide.md
docs/agent_goals/: backend_product_runtime_zero_legacy_goal.md  backend_test_hygiene_goal.md  data_import_bids_epoch_product_goal.md  data_import_runtime_docs_site_goal.md  data_import_tier1_tier2_product_goal.md  legacy_command_spine_delivery_goal.md
docs/architecture/: README.md  agent.md  backend.md  data_pipeline.md  overview.md  ui.md  validation.md
docs/current/: BUG_TRIAGE.md  PLAN.md  QUALITY_DASHBOARD.md  README.md  STATUS_REPORT.md
docs/decisions/: ADR-001-langchain-adoption.md  ADR-002-multi-agent-vision.md  ADR-005-unified-state-lock-system.md  ADR-008-tool-call-evaluation-framework.md  ADR-009-hybrid-mcp-architecture.md  ADR-010-workflow-driven-agent.md  README.md
docs/development/: implementation-plan.md  known-issues.md  roadmap.md  scripts.md
docs/getting-started/: installation.md  quickstart.md
docs/planning/: now.md  (+1 more)
documentation/: ARCHITECTURE_OVERVIEW.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DESIGN_PATTERNS.md  FULL_CODE_REVIEW_2025-02-25.md  GLOSSARY.md  KNOWN_ISSUES.md  README.md  ROADMAP.md  UI_CODE_REVIEW_REPORT.md  arch.md  architecture.md  coding_style.md  data_loading_and_labeling_spec.md  developer_guide.md  implementation_plan.md  improvement_suggestions.md  testing_guide.md  testing_improvements.md  testing_notes.md
remote/: agent.py  agent_for_plot.py  environment.yml  examples.csv  prompts.py  requirements.txt
scripts/: check_loaders.py  debug_list_gemini_models.py  list_gemini_models.py  run_tests.py  verify_api_llm.py  verify_gemini_llm.py  verify_headless.py  verify_imports.py  verify_lazy_import.py  verify_preprocess_imports.py  verify_rag.py  verify_real_tools.py
tests/: architecture_compliance.py  conftest.py  test_e2e_training.py  test_epoch_duration_bug.py  test_import_agent.py  test_import_pyqt.py  test_io_integration.py  test_metadata_integration.py  test_pipeline_integration.py  test_real_data_pipeline.py  test_sample.py  test_training_integration.py  test_ui_integration.py  verify_phase1.py
(+1754 files in other folders)
