[tool.poetry]
name = "xbrainlab"
version = "0.1.0"
description = "XBrainLab: EEG Analysis Platform with AI Agent"
authors = ["XBrainLab Team"]
readme = "documentation/README.md"
packages = [{include = "XBrainLab"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Core Science Stack
numpy = "^1.23.0"
scipy = "^1.10.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.4.0"
pandas = "^2.0.0"
h5py = "^3.10.0"

# EEG Analysis
mne = "^1.6.0"
pymatreader = "^1.0.0"

# Deep Learning Core (Required for Backend & LLM)
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
captum = "^0.7.0"

# Utilities
tqdm = "^4.66.0"
requests = "^2.31.0"
pyyaml = "^6.0"
psutil = "^5.9.0"
pyqt6 = "^6.10.2"
openai = "^2.15.0"
google-genai = "^1.59.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
PyQt6 = "^6.6.0"
qdarkstyle = "^3.2"
vtk = "9.3.1"
pyvista = ">=0.43.0,<0.45.0"
pyvistaqt = ">=0.11.0,<0.12.0"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
transformers = "^4.30.0"
accelerate = "^1.12.0"
sentence-transformers = "^2.2.0"
torchinfo = "^1.8.0"
bitsandbytes = "^0.49.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
black = "^24.0.0"
pre-commit = "^3.6.0"
isort = "^5.13.0"
poethepoet = "^0.40.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-qt = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---

[tool.ruff]
ignore = [
    "PLR09",
    "PLR2004",
]
select = [
    "F",
    "W",
    "E",
    "I",
    "A",
    "B",
    "C4",
    "SIM",
    "UP",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "RUF",
    "TRY3",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
test-backend = "scripts.run_tests:backend"
test-ui = "scripts.run_tests:ui"
test-llm = "scripts.run_tests:run_llm_tests"
test-remote = "scripts.run_tests:run_remote_tests"
benchmark-llm = "scripts.benchmark.eval_agent:run_benchmark_cli"
# test-all = "scripts.run_tests:all_tests"

[tool.poe.tasks]
verify = "python scripts/verify_real_tools.py"
test-unit = "pytest tests/unit"
test-real = "pytest tests/unit/llm/tools/real"
verify-api = "python scripts/verify_api_llm.py"
verify-gemini = "python scripts/verify_gemini_llm.py"
clean = { cmd = "rm -rf output", help = "Remove output directory" }
test-all = "pytest"
