[tool.poetry]
name = "xbrainlab"
version = "0.4.2"
description = "XBrainLab: EEG Analysis Platform with AI Agent"
authors = ["XBrainLab Team"]
readme = "documentation/README.md"
packages = [{include = "XBrainLab"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Core Science Stack
numpy = "^1.23.0"
scipy = "^1.10.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.4.0"
pandas = "^2.0.0"
h5py = "^3.10.0"

# EEG Analysis
mne = "^1.6.0"
pymatreader = "^1.0.0"

# Deep Learning Core (Required for Backend & LLM)
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
captum = "^0.7.0"

# Utilities
tqdm = "^4.66.0"
requests = "^2.31.0"
pyyaml = "^6.0"
psutil = "^5.9.0"
pyqt6 = "^6.10.2"
openai = "^2.15.0"
google-genai = "^1.59.0"
python-dotenv = "^1.2.1"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
qdrant-client = "^1.9.0"
sentence-transformers = "^2.2.2"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
PyQt6 = "^6.6.0"
qdarkstyle = "^3.2"
vtk = "9.3.1"
pyvista = ">=0.43.0,<0.45.0"
pyvistaqt = ">=0.11.0,<0.12.0"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
transformers = "^4.30.0"
accelerate = "^1.12.0"
torchinfo = "^1.8.0"
bitsandbytes = "^0.49.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
black = "^24.0.0"
pre-commit = "^3.6.0"
isort = "^5.13.0"
poethepoet = "^0.40.0"
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"
types-pyyaml = "^6.0.12.20250915"
commitizen = "^4.11.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-qt = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---

[tool.ruff]
# Top level options (optional)

[tool.ruff.lint]
ignore = [
    "PLR09",
    "PLR2004",
    "S110",
    "N999"  # Ignore module naming for XBrainLab
]
select = [
    "F",
    "W",
    "E",
    "I",
    "A",
    "B",
    "C4",
    "SIM",
    "UP",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "RUF",
    "RUF",
    "TRY3",
    "S",
    "N",
]

[tool.ruff.lint.per-file-ignores]
"run.py" = ["E402"]
"scripts/**/*.py" = ["E402", "E501", "SIM102", "N806", "C414", "PERF", "PLR5501", "E722"]
"tests/**/*.py" = ["E402", "S101", "N"]
"XBrainLab/backend/dataset/dataset_generator.py" = ["PLC0415"]
"XBrainLab/backend/load_data/data_loader.py" = ["PLC0415"]
"XBrainLab/llm/rag/retriever.py" = ["PLC0415"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X", "Y", "x", "y", "Pxx"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
exclude = [
    "tests",
    "XBrainLab/llm/core/models",
    "scripts"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
test-backend = "scripts.run_tests:backend"
test-ui = "scripts.run_tests:ui"
test-llm = "scripts.run_tests:run_llm_tests"
test-remote = "scripts.run_tests:run_remote_tests"
benchmark-llm = "scripts.benchmark.simple_bench:main"
# test-all = "scripts.run_tests:all_tests"

[tool.poe.tasks]
# Development
verify = "python scripts/verify_real_tools.py"
run = "python run.py"

# Testing
test-unit = "pytest tests/unit -v"
test-integration = "pytest tests/integration -v"
test-backend = "pytest tests/unit/backend tests/integration -v"
test-ui = "pytest tests/unit/ui -v"
test-llm = "pytest tests/unit/llm -v"
test-real = "pytest tests/unit/llm/tools/real"
test-all = "pytest"
test-cov = "pytest --cov=XBrainLab --cov-report=html --cov-report=term-missing"

# Code Quality
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
mypy = "mypy XBrainLab/"
check-architecture = "python tests/architecture_compliance.py"
check = ["lint", "mypy", "test-unit", "check-architecture"]

# LLM Tools
verify-api = "python scripts/verify_api_llm.py"
verify-gemini = "python scripts/verify_gemini_llm.py"
list-models = "python scripts/list_gemini_models.py"

# Utilities
clean = { cmd = "rm -rf output __pycache__ .pytest_cache .ruff_cache .mypy_cache htmlcov .coverage", help = "Remove temporary files" }
pre-commit-run = "pre-commit run --all-files"

# Changelog (自動化)
changelog = "cz changelog"
bump = "cz bump"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.2"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
changelog_file = "documentation/CHANGELOG.md"
changelog_incremental = true
